# protein-hmm

./: .gitignore  README.md  pyproject.toml
configs/: data.yaml  experiments.yaml  models.yaml
notebooks/: 00_dataset_scouting.ipynb  01_alignment_qc.ipynb  02_results_overview.ipynb
reports/notes/: figure_captions.md  poster_key_results.md
reports/tables/: baseline_metrics.csv  dataset_summary.csv  family_model_self_ranks.csv  model_evaluation.csv  unified_evaluation.csv
scripts/: _bootstrap.py  analyze_state_rsa.py  build_dataset.py  build_structure_annotations.py  compare_K4_vs_K6.py  compute_full_evaluation_table.py  evaluate_annotations.py  evaluate_baselines.py  make_alignment_flowchart.py  make_report_figures.py  make_report_tables.py  make_state_summary_figures.py  render_state_colored_structure.py  run_model_selection.py  run_unified_evaluation.py  scout_families.py  summarize_dataset.py  train_family_models.py  train_reference_hmm.py  train_unsupervised.py
src/protein_hmm/: __init__.py  config.py  constants.py  types.py
src/protein_hmm/analysis/: evaluation.py  family_comparison.py  metrics.py  rsa.py  state_interpretation.py
src/protein_hmm/data/: alignment.py  dssp.py  encoding.py  loaders.py  pfam_seed.py  preprocessing.py  sifts.py  splits.py  structure_annotations.py
src/protein_hmm/inference/: __init__.py  viterbi.py  (+2 more)
tests/: support.py  test_alignment.py  test_baselines.py  test_baum_welch_extras.py  test_encoding.py  test_evaluation.py  test_family_comparison.py  test_inference.py  test_metrics.py  test_smoke.py  test_structure_sources.py
(+10 files in other folders)
